csComp/includes/css/csStyles.css
/* ... */
.featureTooltip td:first-child {
    width: 16px;
}
.featureTooltip td:nth-child(2) {
    white-space: nowrap;
    -moz-text-overflow: ellipsis;
    -ms-text-overflow: ellipsis;
    -o-text-overflow: ellipsis;
    text-overflow: ellipsis;
    overflow: hidden;
    max-width: 1px;
    width: 100%;
}
.featureTooltip td:nth-child(3) {
    white-space: nowrap;
    width: 0;
    text-align: right;
    font-weight: bold;
}
.style-icon {
    border-radius: 25%;
    border: red;
    width: 20px;
    height: 20px;
    padding-top: 2px;
    padding-left: 4px;
}
.panel-group {
    margin: 10px;
}
.property-edit {
    clear: both;
}
.not-valid-input {
    color: red;
}
.icons-on-hover {
    float: left;
    position: relative;
    display: none;
    left: -5px;
}
.property-action {
    position: relative;
    display: inline-block;
}
.icons-on-hover:hover {
    display: block;
}
.feature-prop-item {
    border-radius: 3px;
    min-height: 36px;
    border: none;
}
.feature-prop-config {
    margin-left: 50px;
    margin-top: 30px;
}
.feature-prop-value {
    font-weight: 800;
}
.feature-prop-property {
    margin-left: 0px;
    background: transparent;
}
.feature-prop-stats {
    margin-top: 10px;
    font-size: 12px;
    opacity: .8;
}
.item-stat-title {}
.item-stat-value {
    font-weight: 700;
    margin-right: 10px;
}
.feature-prop-title {
    overflow: hidden;
    padding-left: 4px;
    padding-right: 20px;
    position: relative;
    margin-left: 50px;
}
.feature-prop-property:hover {
    margin-left: 0px;
    background-color: rgb(228, 228, 228);
}
.panel-heading:hover .icons-on-hover {
    display: block;
}
#featureprops-content:hover leftpanel-header-button-container {
    opacity: 0.5;
}

/* leftpanel */

.leftpanel-entrance {
    -webkit-animation: fadeInLeft 0.5s
}
.leftpanel-entrance.ng-hide {
    opacity: 0;
}
.leftpanel-exit {
    -webkit-animation: fadeOutLeft 0.5s
}
.leftpanel-header-button {
    float: right;
    border: 0;
    background: transparent;
}
.leftpanel-header-button-container {
    float: right;
    margin-right: 10px;
}
.leftpanel-header-button-container-left {
    float: left;
    margin-left: -5px;
    margin-right: 5px;
}

/* dashboard */

.dashboard-directive {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 350px;
}
.leftpanel-collapsed .dashboard-directive {
    width: 100%;
    height: 100%;
    position: absolute;
    right: 0;
    top: 0;
    left: 10px;
}
.dashboard-name {
    font-size: 18px;
}
.dashboard-item {
    margin-right: 5px;
    padding: 3px;
    cursor: pointer;
}
.dashboard-selected {
    background: black;
    color: white;
    border-radius: 3px;
}
.dashboard-edit-checkbox {
    font-size: 18px;
}
.control-label {
    font-size: 16px;
    width: 100px;
    margin-left: 5px;
}
.widgets-edit-list {
    list-style-type: none;
    padding: 0;
}
.widget-edit-item {
    font-size: 18px;
}
.gridster-content {
    pointer-events: all;
}
.widget-edit {
    float: right;
    position: absolute;
    top: 10px;
    display: none;
    right: 10px;
    opacity: 0.75;
    cursor: pointer;
}
.widget-button {
    margin-right: 5px;
}
.widget-title {
    font-size: 18px;
    position: absolute;
    font-weight: bold;
    margin: 4px;
}
.widget-container {
    border-style: solid;
    background: white;
    padding: 3px;
    pointer-events: all;
}
.modal {
    display: block;
}
.modal-body:before, .modal-body:after {
    display: table;
    content: " ";
}
.modal-header:before, .modal-header:after {
    display: table;
    content: " ";
}

/*HISTOGRAM*/

.bar rect {
    fill: steelblue;
    shape-rendering: crispEdges;
}
.bar text {
    fill: #fff;
}
.bar.highlight rect {
    fill: red;
}
.axis path, .axis line {
    fill: none;
    stroke: #000;
    shape-rendering: crispEdges;
}

/*MCA Voting style*/

.avoid {
    background: #ff0000;
    background: rgba(255, 0, 0, 0.3);
}
.prefer {
    background: #0064ff;
    background: rgba(0, 100, 255, 0.3);
}
.disabledMca {
    background: #d2d2d2;
    background: rgba(210, 210, 210, 0.3);
}
.ignoredCriteria {
    text-decoration: line-through;
}
.wide-tooltip .tooltip-inner {
    width: 400px;
    max-width: 400px;
}

/* spinner */

.spinner {
    text-align: center;
    float: right;
    position: absolute;
    right: 5px;
    top: 0;
}
.spinner > div {
    width: 6px;
    height: 6px;
    background-color: #333;
    border-radius: 100%;
    display: inline-block;
    -webkit-animation: bouncedelay 1.4s infinite ease-in-out;
    animation: bouncedelay 1.4s infinite ease-in-out;
    /* Prevent first frame from flickering when animation starts */
    -webkit-animation-fill-mode: both;
    animation-fill-mode: both;
}
.spinner .bounce1 {
    -webkit-animation-delay: -0.32s;
    animation-delay: -0.32s;
}
.spinner .bounce2 {
    -webkit-animation-delay: -0.16s;
    animation-delay: -0.16s;
}
@-webkit-keyframes bouncedelay {
    0%, 80%, 100% {
        -webkit-transform: scale(0.0);
    }
    40% {
        -webkit-transform: scale(1.0);
    }
}
@keyframes bouncedelay {
    0%, 80%, 100% {
        transform: scale(0.0);
        -webkit-transform: scale(0.0);
    }
    40% {
        transform: scale(1.0);
        -webkit-transform: scale(1.0);
    }
}
.accordionIcon {
    width: 12px;
    margin: 0 2px;
}

/* START CHART STYLE */

.chart {
    background: #eee;
    padding: 3px;
}
.chart div {
    width: 0;
    transition: all 1s ease-out;
    -moz-transition: all 1s ease-out;
    -webkit-transition: all 1s ease-out;
}
.chart div {
    font: 10px sans-serif;
    background-color: steelblue;
    text-align: right;
    padding: 3px;
    margin: 5px;
    color: white;
    box-shadow: 2px 2px 2px #666;
}
.sparkline {
    fill: none;
    stroke: #000;
    stroke-width: 1px;
}
.sparkcircle-max {
    fill: red;
}
.sparkcircle-min {
    fill: green;
}
.sparkline-path {
    stroke: steelblue;
    stroke-width: 1;
}
/* ... */

